// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom validation - check errorPath - level 1 1`] = `
{
  "errorMessage": "Custom validation failed",
  "errorPath": [
    "name",
  ],
  "isValid": false,
  "properties": {
    "address": {
      "isValid": true,
      "properties": {
        "line1": {
          "isValid": true,
        },
      },
    },
    "name": {
      "errorMessage": "Custom validation failed",
      "errorPath": [
        "name",
      ],
      "isValid": false,
    },
  },
}
`;

exports[`Custom validation - check errorPath - level 2 1`] = `
{
  "errorMessage": "Custom validation failed",
  "errorPath": [
    "address",
    "line1",
  ],
  "isValid": false,
  "properties": {
    "address": {
      "errorMessage": "Custom validation failed",
      "errorPath": [
        "address",
        "line1",
      ],
      "isValid": false,
      "properties": {
        "line1": {
          "errorMessage": "Custom validation failed",
          "errorPath": [
            "address",
            "line1",
          ],
          "isValid": false,
        },
      },
    },
    "name": {
      "isValid": true,
    },
  },
}
`;
